# moseq-tools

./: MANIFEST.in  pyproject.toml
moseq_tools/: config.py  cosine_dist.py  detect_empty_frames.py  extraction-config.yaml  frame_flip_qc.py  generate_moseq_configs.py  hdf5_extract.py  merge_syllables.py  merge_treatment_from_yaml.py  merge_treatments.py  slice_dataframe.py
moseq_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
moseq_tools/data/: pca-config.yaml
